fabric/testdata/out/ing_spp-perf-test-product-search-default-404-route-spp-perf-test-product-search-master-301.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-routes":"PathSubtree(\"/\")
      -\u003e oauthTokeninfoAllScope(\"uid\") -\u003e unverifiedAuditLog(\"sub\")
      -\u003e status(404) -\u003e inlineContent(\"{\\\"title\\\":\\\"Gateway Rejected\\\",\\\"status\\\":404,\\\"detail\\\":\\\"Gateway
      Route Not Matched\\\"}\") -\u003e \u003cshunt\u003e"},"labels":{"controller-uid":"26cb89c8-ae17-11e9-b380-0a202eda0878","deployment-id":"d-2nf1yhksdppk82q2khnu2w78qd","pipeline-id":"l-9jcuet1pfx4u7ewpus6zwwqfj"},"name":"spp-perf-test-product-search-default-404-route-spp-perf-test-product-search-master-301","namespace":"default"},"spec":{"rules":[{"host":"spp-perf-test-product-search-master-301.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-perf-test-p [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-routes: PathSubtree("/") -> oauthTokeninfoAllScope("uid")
      -> unverifiedAuditLog("sub") -> status(404) -> inlineContent("{\"title\":\"Gateway
      Rejected\",\"status\":404,\"detail\":\"Gateway Route Not Matched\"}") -> <shunt>
  creationTimestamp: "2021-08-30T14:08:35Z"
  generation: 1
  labels:
    controller-uid: 26cb89c8-ae17-11e9-b380-0a202eda0878
    deployment-id: d-2nf1yhksdppk82q2khnu2w78qd
    pipeline-id: l-9jcuet1pfx4u7ewpus6zwwqfj
  name: spp-perf-test-product-search-default-404-route-spp-perf-test-product-search-master-301
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-perf-test-product-search
    uid: 26cb89c8-ae17-11e9-b380-0a202eda0878
  resourceVersion: "1357489306"
  uid: 1c11b582-98da-42ed-a226-829c8b359695
spec:
  rules:
  - host: spp-perf-test-product-search-master-301.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-perf-test-product-search-master-301
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
